--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "eslint-config-next": "13.4.1",
+    "leaflet": "^1.9.3",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.10.0",
     "postcss": "8.4.23",
     "query-string": "^8.1.0",
     "react": "18.2.0",
@@ -28,12 +30,16 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "world-countries": "^4.0.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
